--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "11.2.7",
     "@testing-library/user-event": "12.8.3",
     "bootstrap": "^4.6.0",
-    "firebase": "^8.6.5",
+    "firebase": "^8.6.8",
+    "js-cookie": "^2.2.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "1.1.2"
   },
